@@ -1,3 +1,7 @@
+2023-05-29  Robby Stephenson  <robby@periapsis.org>
+
+	* Added support for reading images from data URLs.
+
 2023-05-12  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 3.5.
